fix again my favourite slider  on tablet

--- a/src/sass/layout/_restaurant-about.scss
+++ b/src/sass/layout/_restaurant-about.scss
@@ -150,7 +150,7 @@
   @include tablet-s {
     position: absolute;
     right: 0;
-    bottom: -550px;
+    bottom: -896px;
 
     .image-slider {
       margin: 0;
